Update stats results to include estimated means, slopes, and contrasts

--- a/references.bib
+++ b/references.bib
@@ -112,7 +112,7 @@
 @misc{strengejackePerformanceAssessmentRegression2024a,
   title = {Performance: {{Assessment}} of {{Regression Models Performance}}},
   shorttitle = {Performance},
-  author = {L{\"u}decke (@strengejacke), Daniel and Makowski  (@Dom\_Makowski), Dominique and {Ben-Shachar  (@mattansb)}, Mattan S. and Patil  (@patilindrajeets), Indrajeet and Waggoner, Philip and Wiernik  (@bmwiernik), Brenton M. and Th{\'e}riault  (@rempsyc), R{\'e}mi and {Arel-Bundock}, Vincent and Jullum, Martin and {gjo11} and Bacher, Etienne},
+  author = {L{\"u}decke, Daniel and Makowski  (@Dom\_Makowski), Dominique and {Ben-Shachar  (@mattansb)}, Mattan S. and Patil  (@patilindrajeets), Indrajeet and Waggoner, Philip and Wiernik  (@bmwiernik), Brenton M. and Th{\'e}riault  (@rempsyc), R{\'e}mi and {Arel-Bundock}, Vincent and Jullum, Martin and {gjo11} and Bacher, Etienne},
   year = {2024},
   month = mar,
   urldate = {2024-03-30},
