Update typos in IMTP section of results.

--- a/stats_results.qmd
+++ b/stats_results.qmd
@@ -419,6 +419,6 @@ imtp_contr <- estimate_contrasts(imtp_model) |>
   mutate_if(is.numeric, round, 2)
 
 ```
-Countermovement jump performance under the control condition was `r imtp_means$Mean[1]` [95% CI: `r imtp_means$CI_low[1]`, `r imtp_means$CI_high[1]`] N, under the low BFR condition it was `r imtp_means$Mean[2]` [95% CI: `r imtp_means$CI_low[2]`, `r imtp_means$CI_high[2]`] N, and under the high BFR condition it was `r imtp_means$Mean[3]` [95% CI: `r imtp_means$CI_low[3]`, `r imtp_means$CI_high[3]`] N. There were neglible differences between conditions. Compared with the control condition the low BFR condition resulted in a `r imtp_contr$Difference[3]*-1` [95% CI: `r imtp_contr$CI_low[3]*-1`, `r imtp_contr$CI_high[3]*-1`] cm lower countermovement jump height, and the high BFR condition resulted in a `r imtp_contr$Difference[2]*-1` [95% CI: `r imtp_contr$CI_low[2]*-1`, `r imtp_contr$CI_high[2]*-1`] cm lower countermovement jump height. The contrast between the low BFR and high BFR conditions was `r imtp_contr$Difference[2]*-1` [95% CI: `r imtp_contr$CI_low[2]*-1`, `r imtp_contr$CI_high[2]*-1`] greater for the high BFR condition. Isometric mid thigh pull results are seen in figure (@fig-perform (D)).
+Isometric mid thigh pull performance under the control condition was `r imtp_means$Mean[1]` [95% CI: `r imtp_means$CI_low[1]`, `r imtp_means$CI_high[1]`] N, under the low BFR condition it was `r imtp_means$Mean[2]` [95% CI: `r imtp_means$CI_low[2]`, `r imtp_means$CI_high[2]`] N, and under the high BFR condition it was `r imtp_means$Mean[3]` [95% CI: `r imtp_means$CI_low[3]`, `r imtp_means$CI_high[3]`] N. There were neglible differences between conditions. Compared with the control condition the low BFR condition resulted in a `r imtp_contr$Difference[3]*-1` [95% CI: `r imtp_contr$CI_low[3]*-1`, `r imtp_contr$CI_high[3]*-1`] N greater isometric mid thigh pull, and the high BFR condition resulted in a `r imtp_contr$Difference[2]*-1` [95% CI: `r imtp_contr$CI_low[2]*-1`, `r imtp_contr$CI_high[2]*-1`] N lower isometric mid thigh pull. The contrast between the low BFR and high BFR conditions was `r imtp_contr$Difference[2]*-1` [95% CI: `r imtp_contr$CI_low[2]*-1`, `r imtp_contr$CI_high[2]*-1`] greater for the high BFR condition. Isometric mid thigh pull results are seen in figure (@fig-perform (D)).
 
 # References
