CIs wrong way round on contrasts

--- a/stats_results.qmd
+++ b/stats_results.qmd
@@ -243,7 +243,7 @@ borg_rpe_contr <- estimate_contrasts(borg_rpe_model) |>
   mutate_if(is.numeric, round, 2)
 
 ```
-Rating of perceived exertion under the control condition was `r borg_rpe_means$Mean[1]` [95% CI: `r borg_rpe_means$CI_low[1]`, `r borg_rpe_means$CI_high[1]`] points, under the low BFR condition it was `r borg_rpe_means$Mean[2]` [95% CI: `r borg_rpe_means$CI_low[2]`, `r borg_rpe_means$CI_high[2]`] points, and under the high BFR condition it was `r borg_rpe_means$Mean[3]` [95% CI: `r borg_rpe_means$CI_low[3]`, `r borg_rpe_means$CI_high[3]`] points. Compared with the control condition the low BFR condition resulted in a `r borg_rpe_contr$Difference[3]*-1` [95% CI: `r borg_rpe_contr$CI_low[3]*-1`, `r borg_rpe_contr$CI_high[3]*-1`] points greater rating of perceived exertion, and the high BFR condition resulted in a `r borg_rpe_contr$Difference[2]*-1` [95% CI: `r borg_rpe_contr$CI_low[2]*-1`, `r borg_rpe_contr$CI_high[2]*-1`] points greater rating of perceived exertion. The contrast between the low BFR and high BFR conditions was `r borg_rpe_contr$Difference[2]*-1` [95% CI: `r borg_rpe_contr$CI_low[2]*-1`, `r borg_rpe_contr$CI_high[2]*-1`] greater for the high BFR condition. Rating of perceived exertion results are seen in figure (@fig-warmup (B)).
+Rating of perceived exertion under the control condition was `r borg_rpe_means$Mean[1]` [95% CI: `r borg_rpe_means$CI_low[1]`, `r borg_rpe_means$CI_high[1]`] points, under the low BFR condition it was `r borg_rpe_means$Mean[2]` [95% CI: `r borg_rpe_means$CI_low[2]`, `r borg_rpe_means$CI_high[2]`] points, and under the high BFR condition it was `r borg_rpe_means$Mean[3]` [95% CI: `r borg_rpe_means$CI_low[3]`, `r borg_rpe_means$CI_high[3]`] points. Compared with the control condition the low BFR condition resulted in a `r borg_rpe_contr$Difference[3]*-1` [95% CI: `r borg_rpe_contr$CI_high[3]*-1`, `r borg_rpe_contr$CI_low[3]*-1`] points greater rating of perceived exertion, and the high BFR condition resulted in a `r borg_rpe_contr$Difference[2]*-1` [95% CI: `r borg_rpe_contr$CI_high[2]*-1`, `r borg_rpe_contr$CI_low[2]*-1`] points greater rating of perceived exertion. The contrast between the low BFR and high BFR conditions was `r borg_rpe_contr$Difference[1]*-1` [95% CI: `r borg_rpe_contr$CI_high[1]*-1`, `r borg_rpe_contr$CI_low[1]*-1`] greater for the high BFR condition. Rating of perceived exertion results are seen in figure (@fig-warmup (B)).
 
 ## Effects of Warm-up on Performance Outcomes
 ```{r}
@@ -346,7 +346,7 @@ cmj_contr <- estimate_contrasts(cmj_model) |>
   mutate_if(is.numeric, round, 2)
 
 ```
-Countermovement jump performance under the control condition was `r cmj_means$Mean[1]` [95% CI: `r cmj_means$CI_low[1]`, `r cmj_means$CI_high[1]`] points, under the low BFR condition it was `r cmj_means$Mean[2]` [95% CI: `r cmj_means$CI_low[2]`, `r cmj_means$CI_high[2]`] points, and under the high BFR condition it was `r cmj_means$Mean[3]` [95% CI: `r cmj_means$CI_low[3]`, `r cmj_means$CI_high[3]`] points. Compared with the control condition the low BFR condition resulted in a `r cmj_contr$Difference[3]*-1` [95% CI: `r cmj_contr$CI_low[3]*-1`, `r cmj_contr$CI_high[3]*-1`] cm lower countermovement jump height, and the high BFR condition resulted in a `r cmj_contr$Difference[2]*-1` [95% CI: `r cmj_contr$CI_low[2]*-1`, `r cmj_contr$CI_high[2]*-1`] cm lower countermovement jump height. The contrast between the low BFR and high BFR conditions was `r cmj_contr$Difference[2]*-1` [95% CI: `r cmj_contr$CI_low[2]*-1`, `r cmj_contr$CI_high[2]*-1`] greater for the high BFR condition. Countermovement jump results are seen in figure (@fig-perform (B)).
+Countermovement jump performance under the control condition was `r cmj_means$Mean[1]` [95% CI: `r cmj_means$CI_low[1]`, `r cmj_means$CI_high[1]`] points, under the low BFR condition it was `r cmj_means$Mean[2]` [95% CI: `r cmj_means$CI_low[2]`, `r cmj_means$CI_high[2]`] points, and under the high BFR condition it was `r cmj_means$Mean[3]` [95% CI: `r cmj_means$CI_low[3]`, `r cmj_means$CI_high[3]`] points. Compared with the control condition the low BFR condition resulted in a `r cmj_contr$Difference[3]*-1` [95% CI: `r cmj_contr$CI_high[3]*-1`, `r cmj_contr$CI_low[3]*-1`] cm lower countermovement jump height, and the high BFR condition resulted in a `r cmj_contr$Difference[2]*-1` [95% CI: `r cmj_contr$CI_high[2]*-1`, `r cmj_contr$CI_low[2]*-1`] cm lower countermovement jump height. The contrast between the low BFR and high BFR conditions was `r cmj_contr$Difference[1]*-1` [95% CI: `r cmj_contr$CI_high[1]*-1`, `r cmj_contr$CI_low[1]*-1`] greater for the high BFR condition. Countermovement jump results are seen in figure (@fig-perform (B)).
 
 ### Sprints
 ```{r}
@@ -419,6 +419,6 @@ imtp_contr <- estimate_contrasts(imtp_model) |>
   mutate_if(is.numeric, round, 2)
 
 ```
-Isometric mid thigh pull performance under the control condition was `r imtp_means$Mean[1]` [95% CI: `r imtp_means$CI_low[1]`, `r imtp_means$CI_high[1]`] N, under the low BFR condition it was `r imtp_means$Mean[2]` [95% CI: `r imtp_means$CI_low[2]`, `r imtp_means$CI_high[2]`] N, and under the high BFR condition it was `r imtp_means$Mean[3]` [95% CI: `r imtp_means$CI_low[3]`, `r imtp_means$CI_high[3]`] N. There were neglible differences between conditions. Compared with the control condition the low BFR condition resulted in a `r imtp_contr$Difference[3]*-1` [95% CI: `r imtp_contr$CI_low[3]*-1`, `r imtp_contr$CI_high[3]*-1`] N greater isometric mid thigh pull, and the high BFR condition resulted in a `r imtp_contr$Difference[2]*-1` [95% CI: `r imtp_contr$CI_low[2]*-1`, `r imtp_contr$CI_high[2]*-1`] N lower isometric mid thigh pull. The contrast between the low BFR and high BFR conditions was `r imtp_contr$Difference[2]*-1` [95% CI: `r imtp_contr$CI_low[2]*-1`, `r imtp_contr$CI_high[2]*-1`] greater for the high BFR condition. Isometric mid thigh pull results are seen in figure (@fig-perform (D)).
+Isometric mid thigh pull performance under the control condition was `r imtp_means$Mean[1]` [95% CI: `r imtp_means$CI_low[1]`, `r imtp_means$CI_high[1]`] N, under the low BFR condition it was `r imtp_means$Mean[2]` [95% CI: `r imtp_means$CI_low[2]`, `r imtp_means$CI_high[2]`] N, and under the high BFR condition it was `r imtp_means$Mean[3]` [95% CI: `r imtp_means$CI_low[3]`, `r imtp_means$CI_high[3]`] N. There were neglible differences between conditions. Compared with the control condition the low BFR condition resulted in a `r imtp_contr$Difference[3]*-1` [95% CI: `r imtp_contr$CI_high[3]*-1`, `r imtp_contr$CI_low[3]*-1`] N greater isometric mid thigh pull, and the high BFR condition resulted in a `r imtp_contr$Difference[2]*-1` [95% CI: `r imtp_contr$CI_high[2]*-1`, `r imtp_contr$CI_low[2]*-1`] N lower isometric mid thigh pull. The contrast between the low BFR and high BFR conditions was `r imtp_contr$Difference[1]*-1` [95% CI: `r imtp_contr$CI_high[1]*-1`, `r imtp_contr$CI_low[1]*-1`] greater for the high BFR condition. Isometric mid thigh pull results are seen in figure (@fig-perform (D)).
 
 # References
